--- a/Server/package.json
+++ b/Server/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "nodemon ./app.js",
     "build": "node ./app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sequelize:init": "sequelize init",
+    "migrate": "sequelize-cli db:migrate",
+    "migration:generate": "sequelize-cli migration:generate"
   },
   "keywords": [],
   "author": "",
@@ -20,8 +23,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5",
     "nodemon": "^3.0.2",
+    "sequelize": "^6.35.2",
+    "sequelize-cli": "^6.6.2",
     "uuid": "^9.0.1"
   }
 }
